--- a/app/index.html
+++ b/app/index.html
@@ -59,17 +59,20 @@
             assets/images/hero--smaller-hi-dpi.jpg 1280w
           "
           alt="Coastal view of ocean and mountains"
+          class="large-hero__image"
         />
       </picture>
       <div class="large-hero__text-content">
-        <h1 class="large-hero__title">Your clarity.</h1>
-        <h2 class="large-hero__subtitle">One trip away.</h2>
-        <p class="large-hero__description">
-          We create soul restoring journeys that inspire you to be you.
-        </p>
-        <p>
-          <a href="#" class="btn btn--orange btn--large">Get Started Today</a>
-        </p>
+        <div class="wrapper">
+          <h1 class="large-hero__title">Your clarity.</h1>
+          <h2 class="large-hero__subtitle">One trip away.</h2>
+          <p class="large-hero__description">
+            We create soul restoring journeys that inspire you to be you.
+          </p>
+          <p>
+            <a href="#" class="btn btn--orange btn--large">Get Started Today</a>
+          </p>
+        </div>
       </div>
     </div>
 
