add interactive mobile menu

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
         <div class="site-header__logo">
           <img src="assets/images/icons/clear-view-escapes.svg" />
         </div>
-        <div class="site-header__menu-icon"></div>
+        <div class="site-header__menu-icon">
+          <div class="site-header__menu-icon__middle"></div>
+        </div>
         <div class="site-header__menu-content">
           <div class="site-header__btn-container">
             <a href="#" class="btn">Get in Touch</a>
@@ -101,7 +103,11 @@
         <div class="wrapper wrapper--medium wrapper--mb">
           <img
             sizes="(min-width: 970px) 976px, 100vw"
-            srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi 1952w.jpg"
+            srcset="
+              assets/images/first-trip-low-res.jpg  565w,
+              assets/images/first-trip.jpg          976w,
+              assets/images/first-trip-hi-dpi.jpg  1952w
+            "
             alt="Couple walking down a street."
           />
         </div>
