--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,15 @@
           </div>
           <nav class="primary-nav primary-nav--pull-right">
             <ul>
-              <li><a href="#our-beginning">Our Beginning</a></li>
-              <li><a href="#features">Features</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
+              <li>
+                <a href="#our-beginning" id="our-beginning-link"
+                  >Our Beginning</a
+                >
+              </li>
+              <li><a href="#features" id="features-link">Features</a></li>
+              <li>
+                <a href="#testimonials" id="testimonials-link">Testimonials</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -87,7 +93,11 @@
       </div>
     </div>
 
-    <div id="our-beginning" class="page-section">
+    <div
+      id="our-beginning"
+      class="page-section"
+      data-matching-link="#our-beginning-link"
+    >
       <div class="wrapper">
         <h2
           class="headline headline--centered headline--light headline--mb-small"
@@ -176,7 +186,11 @@
       </div>
     </div>
 
-    <div id="features" class="page-section page-section--blue">
+    <div
+      id="features"
+      class="page-section page-section--blue"
+      data-matching-link="#features-link"
+    >
       <div class="wrapper">
         <h2 class="section-title">
           <img
@@ -251,6 +265,7 @@
     <div
       id="testimonials"
       class="page-section page-section--testimonials page-section--no-pb-until-large"
+      data-matching-link="#testimonials-link"
     >
       <div class="wrapper wrapper--no-padding-until-large">
         <h2 class="section-title section-title--blue">
